# agentic-mt

./: .gitignore  README.md  pyproject.toml
configs/: pipelines_l1_conditions.yaml  pipelines_l1_conditions_bloomz.yaml  pipelines_l1_conditions_inkuba.yaml  qe_wmt_da_low_resource.yaml  refinement_tear.yaml  schema.md  triggering_low_resource.yaml  triggering_low_resource_smoketest.yaml
data/: README.md
reports/: advisor_update_phases_1-6.tex  generate_figures.py  generate_macros.py  macros.tex
reports/data/: phase_quantities.json
results/: phase_1_summary.md  phase_2_summary.md  phase_3_summary.md  phase_4_summary.md  phase_5_summary.md  phase_6_summary.md
scripts/: phase3_bestofn.py  phase6_smoketest.py  phase6_smoketest_sw.py  phase6_smoketest_yo.py  submit_pipelines.sh  submit_pipelines_multi.sh  submit_refinement.sh  submit_triggering.sh
src/agentic_mt/pipelines/: analysis.py  data.py  llm.py  retrieval.py  run_experiment.py  scoring.py
src/agentic_mt/pipelines/conditions/: __init__.py  l1_baseline.py  l1_cot.py  l1_cot_tool.py  l1_tool.py  prompts.py
src/agentic_mt/qe/: data.py  run_experiment.py  stats.py
src/agentic_mt/refinement/: analysis.py  condition_a.py  condition_b.py  extract.py  iterate.py  prompts.py  run_experiment.py
src/agentic_mt/triggering/: data.py  modeling.py  pipeline.py  run_experiment.py
src/agentic_mt/triggering/features/: __init__.py  domain.py  idiomaticity.py  length.py  oov.py  syntax.py
